--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,6 +47,12 @@
                                 <td th:text="${stock.getStockQuoteEntity().getPreviousClose()}"></td>
                                 <td th:text="${stock.getStockQuoteEntity().getPrice()}"></td>
                                 <td>
+                                    <form method="POST" th:action="@{/stock}"  accept-charset="UTF-8" style="display:inline">
+                                        <input type="hidden" name="symbol" th:value="${stock.getSymbol()}"/>
+                                        <button class="btn btn-xs btn-info" type="submit" data-toggle="modal">
+                                            <i class="glyphicon glyphicon-refresh"></i> Refresh
+                                        </button>
+                                    </form>
                                     <form method="POST" th:action="${'/stock/delete/' + stock.getId()}"  accept-charset="UTF-8" style="display:inline">
                                         <button class="btn btn-xs btn-danger" type="button" data-toggle="modal" data-target="#confirmDelete">
                                             <i class="glyphicon glyphicon-trash"></i> Delete
