Added error page, scheduledupdate process and autorefresh page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet"  media="screen" />
 
     <script src="/js/datatable.js"></script>
+    <script src="/js/refresh.js"></script>
 
     </head>
     <body>
@@ -23,47 +24,47 @@
                     <label>Enter symbol to download information:</label>
                     <input name="symbol" type="text" />
                     <input type="submit" th:value="Download" />
-
-
-                <div class="form-horizontal" th:if="${not #lists.isEmpty(stocks)}">
-                    <h2>Stock List</h2>
-
-                    <table id="stockTable" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%"><!--<table id="stockTable" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%" role="grid" aria-describedby="example_info" style="width: 100%;">-->
-                        <thead align="left">
-                            <tr>
-                                <th>Id</th>
-                                <th>Symbol</th>
-                                <th>Company name</th>
-                                <th>Previous close</th>
-                                <th>Price</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr th:each="stock : ${stocks}" role="row"  class="odd">
-                                <td th:text="${stock.getId()}"></td>
-                                <td th:text="${stock.getSymbol()}"></td>
-                                <td th:text="${stock.getName()}"></td>
-                                <td th:text="${stock.getStockQuoteEntity().getPreviousClose()}"></td>
-                                <td th:text="${stock.getStockQuoteEntity().getPrice()}"></td>
-                                <td>
-                                    <form method="POST" th:action="@{/stock}"  accept-charset="UTF-8" style="display:inline">
-                                        <input type="hidden" name="symbol" th:value="${stock.getSymbol()}"/>
-                                        <button class="btn btn-xs btn-info" type="submit" data-toggle="modal">
-                                            <i class="glyphicon glyphicon-refresh"></i> Refresh
-                                        </button>
-                                    </form>
-                                    <form method="POST" th:action="${'/stock/delete/' + stock.getId()}"  accept-charset="UTF-8" style="display:inline">
-                                        <button class="btn btn-xs btn-danger" type="button" data-toggle="modal" data-target="#confirmDelete">
-                                            <i class="glyphicon glyphicon-trash"></i> Delete
-                                        </button>
-                                    </form>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
             </form>
+
+            <div class="form-horizontal" th:if="${not #lists.isEmpty(stocks)}">
+                <h2>Stock List</h2>
+
+                <table id="stockTable" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%"><!--<table id="stockTable" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%" role="grid" aria-describedby="example_info" style="width: 100%;">-->
+                    <thead align="left">
+                        <tr>
+                            <th>Id</th>
+                            <th>Symbol</th>
+                            <th>Company name</th>
+                            <th>Previous close</th>
+                            <th>Price</th>
+                            <th>Last updated</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="stock : ${stocks}" role="row"  class="odd">
+                            <td th:text="${stock.getId()}"></td>
+                            <td th:text="${stock.getSymbol()}"></td>
+                            <td th:text="${stock.getName()}"></td>
+                            <td th:text="${stock.getStockQuoteEntity().getPreviousClose()}"></td>
+                            <td th:text="${stock.getStockQuoteEntity().getPrice()}"></td>
+                            <td th:text="${(stock.getUpdatedAt()!=null) ? stock.getUpdatedAt() : stock.getCreatedAt()}"></td>
+                            <td>
+                                <form method="POST" th:action="${'/stock/update/'+ stock.getSymbol()}"  accept-charset="UTF-8" style="display:inline">
+                                    <button class="btn btn-xs btn-info" type="submit" data-toggle="modal">
+                                        <i class="glyphicon glyphicon-refresh"></i> Refresh
+                                    </button>
+                                </form>
+                                <form method="POST" th:action="${'/stock/delete/' + stock.getId()}"  accept-charset="UTF-8" style="display:inline">
+                                    <button class="btn btn-xs btn-danger" type="button" data-toggle="modal" data-target="#confirmDelete">
+                                        <i class="glyphicon glyphicon-trash"></i> Delete
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div class="col-md-1"/>
     </body>
