Added last trade column

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css" th:href="@{/css/main.css}" />
 </head>
 <body>
-<p th:utext="${errorMessage}">Error</p>
+<h1 th:utext="${errorMessage}">Error</h1>
 <a href="index.html" th:href="@{/}">Back to Home Page</a>
 </body>
 </html>
